fix responsive design on mobile devices

--- a/src/App.scss
+++ b/src/App.scss
@@ -186,5 +186,5 @@
 }
 
 .section__margin {
-  padding: 4rem 6rem;
+  margin: 4rem 6rem;
 }
